Fix uneven icon alignment

--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -1,88 +1,88 @@
 @use "../../css-values.scss";
 
 .elevated {
-    background-color: var(--md-sys-elevation-2);
+  background-color: var(--md-sys-elevation-2);
 }
 
 header {
-    position: fixed;
-    z-index: 1;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: css-values.$navbarHeight;
+  box-sizing: border-box;
+  transition: 0.3s;
+
+  div.container {
+    display: flex;
+    height: 100%;
+    padding-inline: 2rem;
+    align-items: center;
+    justify-content: space-between;
+    @include css-values.ResponsiveLayout;
+
+    button.logo {
+      all: unset;
+      height: inherit;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      @include css-values.Clickable;
+    }
+
+    p.headline-small {
+      margin: 0;
+    }
+
+    nav {
+      display: flex;
+      gap: 0.5rem;
+    }
+  }
+
+  button {
+    display: none;
+    position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
     height: css-values.$navbarHeight;
-    box-sizing: border-box;
-    transition: 0.3s;
+    width: css-values.$navbarHeight;
+    padding: 0;
 
-    div.container {
-        display: flex;
-        height: 100%;
-        padding-inline: 2rem;
-        align-items: center;
-        justify-content: space-between;
-        @include css-values.ResponsiveLayout;
-
-        button.logo {
-            all: unset;
-            height: inherit;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            @include css-values.Clickable;
-        }
-
-        p.headline-small {
-            margin: 0;
-        }
-
-        nav {
-            display: flex;
-            gap: 0.5rem;
-        }
+    span.material-symbols-outlined {
+      font-size: 24px;
     }
+  }
 
-    button {
-        display: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: css-values.$navbarHeight;
-        width: css-values.$navbarHeight;
-        padding: 0;
-
-        span.material-symbols-outlined {
-            font-size: 24px;
-            margin-inline: auto;
-        }
-    }
-
-    &.open {
-        height: 184px;
-    }
+  &.open {
+    height: 184px;
+  }
 }
 
 @media screen and (max-width: css-values.$mobileSnap) {
-    header {
-        height: 64px;
-        overflow: hidden;
+  header {
+    height: 64px;
+    overflow: hidden;
 
-        div.container {
-            padding: 1rem;
-            flex-direction: column;
-            align-items: flex-start;
+    div.container {
+      padding: 1rem;
+      flex-direction: column;
+      align-items: flex-start;
 
-            nav {
-                margin-top: 2rem;
-                flex-direction: column;
+      nav {
+        margin-top: 2rem;
+        flex-direction: column;
 
-                a {
-                    width: auto;
-                }
-            }
+        a {
+          width: auto;
         }
-
-        button {
-            display: block;
-        }
+      }
     }
+
+    button {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
